--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 * {
   background-color: #E7F1F1;
-}  
+}
 
-.full-page{
+.full-page {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -36,7 +36,7 @@
   height: 150px;
   width: 150px;
   border: 5px solid black;
- 
+
 }
 
 .red-box-container {
@@ -52,7 +52,7 @@
 
 .red-box {
   background-color: #EA9999;
-  
+
 }
 
 .orange-box-container {
@@ -80,7 +80,7 @@
 }
 
 .yellow-box {
-  background-color: #FFE59A ;
+  background-color: #FFE59A;
 }
 
 .green-box-container {
@@ -109,4 +109,22 @@
 
 .blue-box {
   background-color: #A4C4CA;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+}
+
+.new-palette-button {
+  border-radius: 10px 50px;
+  font-family: 'Poppins', sans-serif;
+  background-color: #000000;
+  color: #FFFFFF;
+  width: 250px;
+  height: 50px;
+  font-size: 24px;
+  letter-spacing: 1.2px;
+  font-weight: 200;
+  font-variant: common-ligatures;
 }
