--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,13 @@
   height: 300px;
   font-family: 'Poppins', sans-serif;
   margin-top: 50px;
+  text-align: center;
 }
 
 .color-container {
   display: flex;
   flex-direction: column;
+  margin: 1rem;
 }
 
 .color-box {
@@ -47,6 +49,12 @@
   width: 150px;
   border: 5px solid black;
   background-color: #000000;
+}
+
+.current-color-palette-text {
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  font-weight:400;
 }
 
 .red-box-container {
