--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@
 .current-color-palette-text {
   font-size: 1.5rem;
   margin-top: 1rem;
-  font-weight:400;
+  font-weight: 400;
 }
 
 .btn-container {
@@ -73,4 +73,11 @@
   letter-spacing: 1.2px;
   font-weight: 200;
   font-variant: common-ligatures;
+}
+
+.image {
+  width: 40px;
+  height: 40px;
+  background-color: rgb(0, 0, 0, 0);
+  margin: 5px;
 }
