--- a/styles.css
+++ b/styles.css
@@ -89,8 +89,108 @@
 }
 
 .saved-palettes-container {
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border-left: 5px solid black;
   width: 420px;
   margin-left: 28px;
+  
 }
+
+.saved-palettes-title {
+  margin-top: 50px;
+  
+  font-size: 38px;
+  height: 50px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  
+}
+
+.saved-color-boxes-container {
+ display: flex;
+ flex-direction: column;
+ height: 300px;
+ width: 400px;
+}
+
+.layer-one {
+  display: flex;
+  justify-content: center;
+}
+
+.layer-two {
+  display: flex;
+  justify-content: center;
+}
+.saved-color-box {
+  height: 50px;
+  width: 50px;
+  border: 5px solid black;
+  margin-right: 10px;
+  margin-top: 25px;
+}
+
+.box-1 {
+ background-color: #4A7C4F;
+}
+
+.box-2 {
+background-color: #D982A6;
+}
+
+.box-3 {
+  background-color: #739C8F;
+}
+
+.box-4 {
+  background-color: #BC613F;
+}
+
+.box-5 {
+  background-color: #F1A563;
+}
+
+.box-6 {
+ background-color: #8299B3;
+}
+
+.box-7 {
+  background-color: #5E478A;
+}
+
+.box-8 {
+  background-color: #C94E59;
+}
+
+.box-9 {
+  background-color: #E0BB24;
+
+}
+
+.box-10 {
+  background-color: #E0BB24;
+
+}
+.box-11 {
+  background-color: #A8D175;
+}
+
+.box-12 {
+  background-color: #6E3C52;
+}
+
+.box-13 {
+  background-color: #F0C89F;
+}
+.box-14 {
+  background-color: #4F85A9;
+}
+.box-15 {
+  background-color: #9A5E2A;
+}
+
+
+
+
