--- a/styles.css
+++ b/styles.css
@@ -65,10 +65,10 @@
 
 .btn-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
-.new-palette-button {
+.palette-button {
   border-radius: 10px 50px;
   font-family: 'Poppins', sans-serif;
   background-color: #000000;
@@ -79,6 +79,7 @@
   letter-spacing: 1.2px;
   font-weight: 200;
   font-variant: common-ligatures;
+
 }
 
 .image {
