--- a/styles.css
+++ b/styles.css
@@ -116,15 +116,11 @@
  width: 400px;
 }
 
-.layer-one {
+.layer {
   display: flex;
   justify-content: center;
 }
 
-.layer-two {
-  display: flex;
-  justify-content: center;
-}
 .saved-color-box {
   height: 50px;
   width: 50px;
@@ -133,7 +129,7 @@
   margin-top: 25px;
 }
 
-.box-1 {
+/* .box-1 {
  background-color: #4A7C4F;
 }
 
@@ -192,6 +188,6 @@ background-color: #D982A6;
   background-color: #9A5E2A;
 }
 
-
+ */
 
 
