Add display saved palette functionality for a single color

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@
   margin-top: 25px;
 }
 
-/* .box-1 {
+.box-1 {
  background-color: #4A7C4F;
 }
 
@@ -187,7 +187,3 @@ background-color: #D982A6;
 .box-15 {
   background-color: #9A5E2A;
 }
-
- */
-
-
