--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
   background-color: #E7F1F1;
-
+  
 }
 
 .full-page {
@@ -89,24 +89,30 @@
   margin: 5px;
 }
 
+.delete-x-container {
+  margin-top: 34px;
+}
+
+.delete-x {
+  width: 44px;
+  height: 44px;
+}
+
 .saved-palettes-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   border-left: 5px solid black;
   width: 420px;
-  margin-left: 28px;
-  
+  margin-left: 28px; 
 }
 
 .saved-palettes-title {
   margin-top: 50px;
-  
   font-size: 38px;
   height: 50px;
   font-family: 'Poppins', sans-serif;
-  font-weight: 700;
-  
+  font-weight: 700;  
 }
 
 .saved-color-boxes-container {
@@ -118,6 +124,7 @@
 
 .layer {
   display: flex;
+  flex-direction: row-reverse;
   justify-content: center;
 }
 
