--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,13 @@
 
 .full-page {
   display: flex;
-  overflow: hidden;
 }
 
 .main-container {
-  margin-left: 20px;
   display: flex;
   flex-direction: column;
   height: 100vh;
+  width: 70%;
 }
 
 .title-container {
@@ -51,8 +50,8 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
-  height: 150px;
-  width: 150px;
+  height: 130px;
+  width: 130px;
   border: 5px solid black;
   background-color: #000000;
 }
@@ -69,7 +68,7 @@
 }
 
 .palette-button {
-  border-radius: 10px 50px;
+  border-radius: 0px 50px;
   font-family: 'Poppins', sans-serif;
   background-color: #000000;
   color: #FFFFFF;
@@ -77,14 +76,14 @@
   height: 50px;
   font-size: 24px;
   letter-spacing: 1.2px;
-  font-weight: 200;
+  font-weight: 300;
   font-variant: common-ligatures;
-
+  border: 0;
 }
 
 .image {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   background-color: rgb(0, 0, 0, 0);
   margin: 5px;
 }
@@ -94,26 +93,21 @@
   flex-direction: column;
   align-items: center;
   border-left: 5px solid black;
-  width: 420px;
+  width: 30%;
   margin-left: 28px;
-  
 }
 
 .saved-palettes-title {
   margin-top: 50px;
-  
   font-size: 38px;
   height: 50px;
   font-family: 'Poppins', sans-serif;
-  font-weight: 700;
-  
+  font-weight: 800;
 }
 
-.saved-color-boxes-container {
- display: flex;
- flex-direction: column;
- height: 300px;
- width: 400px;
+.saved-colors-container {
+  display: flex;
+  flex-direction: column;
 }
 
 .layer {
@@ -122,8 +116,8 @@
 }
 
 .saved-color-box {
-  height: 50px;
-  width: 50px;
+  height: 35px;
+  width: 35px;
   border: 5px solid black;
   margin-right: 10px;
   margin-top: 25px;
@@ -132,4 +126,8 @@
 .saved-palettes-message {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
+}
+
+.hidden {
+  display: none;
 }
