--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,10 @@
   margin: 5px;
 }
 
+.delete {
+  margin-top: 30px;
+}
+
 .saved-palettes-container {
   display: flex;
   flex-direction: column;
