--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,9 @@
 }
 
 .delete-x-container {
-  margin-top: 34px;
+  margin-top: 25px;
+  margin-right: 10px;
+  padding-left: 10px;
 }
 
 .delete-x {
@@ -122,7 +124,6 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
-
 }
 
 .saved-color-box {
